# rlbox

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  SECURITY.md  docs.md  iwyu.imp  leak_suppressions.txt  ub_suppressions.txt
.github/workflows/: cmake.yml
cmake/: rlbox-sandboxing-apiConfig.cmake.in
code/include/: rlbox.hpp  rlbox_app_pointer.hpp  rlbox_assign.hpp  rlbox_conversion.hpp  rlbox_dylib_sandbox.hpp  rlbox_helpers.hpp  rlbox_noop_sandbox.hpp  rlbox_noopindirect_sandbox.hpp  rlbox_noopstaticindirect_sandbox.hpp  rlbox_policy_types.hpp  rlbox_range.hpp  rlbox_sandbox.hpp  rlbox_stdlib.hpp  rlbox_stdlib_polyfill.hpp  rlbox_struct_support.hpp  rlbox_type_traits.hpp  rlbox_types.hpp  rlbox_typetraits.hpp  rlbox_unwrap.hpp  rlbox_wrapper_traits.hpp
code/tests/: test_callback.cpp  test_callback_assignment.cpp  test_comparison.cpp  test_conversion.cpp  test_include.hpp  test_lib_structs_for_cpp_api.hpp  test_operators.cpp  test_sandbox_function_assignment.cpp  test_sandbox_invoke.cpp  test_sandbox_invoke_fail.cpp  test_sandbox_noop_sandbox.cpp  test_sandbox_noop_sandbox_invoke_fail.cpp  test_sandbox_ptr_conversion.cpp  test_stdlib.cpp  test_tainted_assignment.cpp  test_tainted_sizes.cpp  test_tainted_structs.cpp  test_tainted_structs.hpp  test_typetraits.cpp  test_verification.cpp  test_verify_arrays.cpp  test_wrapper_traits.cpp
code/tests/rlbox/: test_app_pointers.cpp  test_bool_operators.cpp  test_callback.cpp  test_comparison.cpp  test_conversion.cpp  test_include.hpp  test_operators.cpp  test_sandbox_function_assignment.cpp  test_sandbox_noop_sandbox.cpp  test_sandbox_noop_sandbox_invoke_fail.cpp  test_sandbox_ptr_conversion.cpp  test_sandbox_transition_customization.cpp  test_sandbox_transition_timings.cpp  test_sandbox_types.cpp  test_stdlib.cpp  test_tainted_assignment.cpp  test_tainted_opaque.cpp  test_tainted_sizes.cpp  test_tainted_structs.cpp  test_tainted_structs.hpp  test_verification.cpp  test_verify_arrays.cpp  test_wrapper_traits.cpp  testing_structs_for_cpp_api.h
code/tests/rlbox_glue/: test_dylib_sandbox_glue.cpp  test_noop_sandbox_glue.cpp  test_noop_sandbox_glue_configs.cpp  test_noop_sandbox_glue_embedder_vars.cpp  test_noopindirect_sandbox_glue.cpp  test_noopstaticindirect_sandbox_glue.cpp  test_sandbox_glue.cpp  test_sandbox_glue.hpp  test_sandbox_glue.inc.cpp
docs/: conf.py  index.rst
docs-src/: index.rst
docs-src/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/doxygen/html/: annotated.html  classes.html  classrlbox_1_1app__pointer-members.html  classrlbox_1_1app__pointer.html  classrlbox_1_1app__pointer__map-members.html  classrlbox_1_1app__pointer__map.html  classrlbox_1_1detail_1_1convert__type__class.html  classrlbox_1_1detail_1_1scope__exit-members.html  classrlbox_1_1detail_1_1scope__exit.html  classrlbox_1_1rlbox__dylib__sandbox-members.html  classrlbox_1_1rlbox__dylib__sandbox.html  classrlbox_1_1rlbox__noop__sandbox-members.html  classrlbox_1_1rlbox__noop__sandbox.html  classrlbox_1_1rlbox__sandbox-members.html  classrlbox_1_1rlbox__sandbox.html  classrlbox_1_1rlbox__sandbox__coll__graph.map  classrlbox_1_1rlbox__sandbox__coll__graph.md5  classrlbox_1_1rlbox__sandbox__inherit__graph.map  classrlbox_1_1rlbox__sandbox__inherit__graph.md5  classrlbox_1_1sandbox__callback-members.html  classrlbox_1_1sandbox__callback.html  classrlbox_1_1sandbox__function-members.html  classrlbox_1_1sandbox__function.html  (+355 more)
docs/sphinx/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
examples/hello-world-cmake/: CMakeLists.txt  README.md  main.cpp  mylib.c  mylib.h
examples/hello-world-noop/: Makefile  README.md  main.cpp  mylib.c  mylib.h
include/: rlbox.hpp  rlbox_abi_conversion.hpp  rlbox_callback.hpp  rlbox_checked_arithmetic.hpp  rlbox_common_error_strings.hpp  rlbox_configs.hpp  rlbox_data_conversion.hpp  rlbox_docs.hpp  rlbox_error_handling.hpp  rlbox_forwarder.hpp  rlbox_function_traits.hpp  rlbox_helpers.hpp  rlbox_memory_mgmt.hpp  rlbox_noop_sandbox.hpp  rlbox_sandbox.hpp  rlbox_sandbox_plugin_base.hpp  rlbox_stdint_types.hpp  rlbox_tainted_array.hpp  rlbox_tainted_base.hpp  rlbox_tainted_common.hpp  rlbox_tainted_fixed_aligned.arithmeticop.inc.hpp  rlbox_tainted_fixed_aligned.hpp  rlbox_tainted_fixed_aligned_pointer.hpp  rlbox_tainted_fundamental_or_enum.binaryop.inc.hpp  rlbox_tainted_fundamental_or_enum.compareop.inc.hpp  rlbox_tainted_fundamental_or_enum.hpp  rlbox_tainted_fundamental_or_enum_base.hpp  rlbox_tainted_hint.hpp  rlbox_tainted_impl.hpp  rlbox_tainted_relocatable.hpp  rlbox_tainted_relocatable_pointer.hpp  rlbox_tainted_volatile.hpp  rlbox_tainted_volatile_standard.hpp  rlbox_tainted_volatile_standard_pointer.hpp  rlbox_type_conversion.hpp  rlbox_type_traits.hpp  rlbox_types.hpp  rlbox_wrapper_traits.hpp
iwyu_wrapper/: README.md  iwyu_wrapper.py  test_iwyu.cpp
rlbox_cpp17/: .clang-format  CMakeLists.txt
rlbox_cpp17/code/include/: rlbox.hpp  rlbox_assign.hpp  rlbox_conversion.hpp  rlbox_helpers.hpp  rlbox_sandbox.hpp  rlbox_typetraits.hpp
rlbox_cpp17/code/tests/: test_convert_fundamental.cpp  test_include.hpp  test_sandbox_ptr_conversion.cpp  test_tainted_sizes.cpp
rlbox_cpp17/include/: rlbox.hpp  rlbox_helpers.hpp
rlbox_cpp17/tests/: test_convert_fundamental.cpp  test_main.cpp
tests/: test_main.cpp  test_rlbox_noop_sandbox.cpp
tests/rlbox_plugin_tests/: test_all.cpp  test_create_destroy.cpp  test_plugin_include.hpp
tests/rlbox_unit_tests/: test_abi_convert.cpp  test_apply_conv.cpp  test_convert_abis.cpp  test_convert_pointers.cpp  test_data_convert.cpp  test_empty.cpp  test_find_abi_changes.cpp  test_forwarder.cpp  test_include.hpp  test_invoke.cpp  test_invoke_fundamental.cpp  test_invoke_pointers.cpp  test_malloc.cpp  test_memory_mgmt.cpp  test_plugin_reflection.cpp  test_tainted_arrays.cpp  test_tainted_assignment.cpp  test_tainted_conversions.cpp  test_tainted_equalities.cpp  test_tainted_operators.cpp  test_tainted_specializations.cpp
(+333 files in other folders)
